--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:prod": "set NODE_ENV=prod && node app.js",
-    "dev": "set NODE_ENV=dev && nodemon app.js"
+    "start:prod": "NODE_ENV=prod node app.js",
+    "dev": "NODE_ENV=dev nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -21,7 +21,6 @@
   "dependencies": {
     "cookie-session": "^2.0.0-beta.3",
     "cors": "^2.8.4",
-    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "mongoose": "^5.1.0",
     "nodemon": "^1.17.4",
